--- a/ArquillianWorkshop-ear/pom.xml
+++ b/ArquillianWorkshop-ear/pom.xml
@@ -38,6 +38,15 @@
                     <defaultLibBundleDir>lib</defaultLibBundleDir>
                 </configuration>
             </plugin>
+            <!-- The WildFly plugin deploys EAR to a local WildFly container -->
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <configuration>
+                    <filename>${project.artifactId}.ear</filename>
+                    <skip>false</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
