--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,93 @@
     <module>ArquillianWorkshop-web</module>
     <module>ArquillianWorkshop-ejb</module>
   </modules>
+  
+   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
+
+    <version.jboss.bom>8.2.0.Final</version.jboss.bom>
+    <version.wildfly>8.2.0.Final</version.wildfly>
+    <version.arquillian.container>8.2.0.Final</version.arquillian.container>
+
+    <version.compiler.plugin>3.2</version.compiler.plugin>
+    <version.ear.plugin>2.9.1</version.ear.plugin>
+    <version.ejb.plugin>2.4</version.ejb.plugin>
+    <version.surefire.plugin>2.18</version.surefire.plugin>
+    <version.war.plugin>2.5</version.war.plugin>
+
+    <maven.compiler.target>1.6</maven.compiler.target>
+    <maven.compiler.source>1.6</maven.compiler.source>
+  </properties>
+
+  <dependencyManagement>
+    <dependencies>
+
+      <!--EJB module version-->
+      <dependency>
+        <groupId>nl.fontys.jee.workshop.arquillian</groupId>
+        <artifactId>ejb</artifactId>
+        <version>${project.version}</version>
+        <type>ejb</type>
+      </dependency>
+            
+      <!--WAR module version-->
+      <dependency>
+        <groupId>nl.fontys.jee.workshop.arquillian</groupId>
+        <artifactId>web</artifactId>
+        <version>${project.version}</version>
+        <type>war</type>
+        <scope>compile</scope>
+      </dependency>
+
+      <!--JBoss BOM-->
+      <dependency>
+        <groupId>org.wildfly.bom</groupId>
+        <artifactId>jboss-javaee-7.0-with-tools</artifactId>
+        <version>${version.jboss.bom}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
+      <!--JBoss BOM-->
+      <dependency>
+        <groupId>org.wildfly.bom</groupId>
+        <artifactId>jboss-javaee-7.0-with-hibernate</artifactId>
+        <version>${version.jboss.bom}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
+    </dependencies>
+  </dependencyManagement>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        
+        <!--Compiler plugin-->
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${version.compiler.plugin}</version>
+          <configuration>
+            <source>${maven.compiler.source}</source>
+            <target>${maven.compiler.target}</target>
+          </configuration>
+        </plugin>
+        
+        <!-- The WildFly plugin deploys EAR to a container-->
+        <plugin>
+          <groupId>org.wildfly.plugins</groupId>
+          <artifactId>wildfly-maven-plugin</artifactId>
+          <version>${version.wildfly.maven.plugin}</version>
+          <inherited>true</inherited>
+          <configuration>
+            <skip>true</skip>
+          </configuration>
+        </plugin>
+        
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
