--- a/pom.xml
+++ b/pom.xml
@@ -100,4 +100,24 @@
       </plugins>
     </pluginManagement>
   </build>
+  <profiles>
+        <profile>
+            <!-- The default profile skips all tests-->
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${version.surefire.plugin}</version>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+</profiles>
 </project>
