--- a/ArquillianWorkshop-web/pom.xml
+++ b/ArquillianWorkshop-web/pom.xml
@@ -96,10 +96,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-            <groupId>org.jboss.arquillian.protocol</groupId>
-            <artifactId>arquillian-protocol-servlet</artifactId>
-            <scope>test</scope>               
-        </dependency>
+      <groupId>org.jboss.arquillian.protocol</groupId>
+      <artifactId>arquillian-protocol-servlet</artifactId>
+      <scope>test</scope>               
+    </dependency>
   </dependencies>
 
   <build>
@@ -161,6 +161,23 @@
 
   <!-- clip -->
   <profiles>
+    <profile>
+      <id>default</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${version.surefire.plugin}</version>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>firefox</id>
       <properties>
