--- a/ArquillianWorkshop-web/pom.xml
+++ b/ArquillianWorkshop-web/pom.xml
@@ -104,22 +104,40 @@
       </plugin>
     </plugins>
     <testResources>
-        <testResource>
-            <directory>src/test/resources</directory>
-            <filtering>true</filtering>
-        </testResource>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
     </testResources>
   </build>
  
 
-<!-- clip -->
-<profiles>
+  <!-- clip -->
+  <profiles>
     <profile>
-       <id>firefox</id>
-       <properties>
-          <browser>firefox</browser>
-       </properties>
-       <dependencies>
+      <!-- The default profile skips all tests-->
+      <id>default</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${version.surefire.plugin}</version>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>firefox</id>
+      <properties>
+        <browser>firefox</browser>
+      </properties>
+      <dependencies>
         <dependency>
           <groupId>org.wildfly</groupId>
           <artifactId>wildfly-arquillian-container-remote</artifactId>
@@ -129,11 +147,11 @@
       </dependencies>
     </profile>
     <profile>
-       <id>chrome</id>
-       <properties>
-           <browser>chrome</browser>
-       </properties>
-       <dependencies>
+      <id>chrome</id>
+      <properties>
+        <browser>chrome</browser>
+      </properties>
+      <dependencies>
         <dependency>
           <groupId>org.wildfly</groupId>
           <artifactId>wildfly-arquillian-container-remote</artifactId>
@@ -142,6 +160,6 @@
         </dependency>
       </dependencies>
     </profile>
-</profiles>
+  </profiles>
 
 </project>
