--- a/ArquillianWorkshop-web/pom.xml
+++ b/ArquillianWorkshop-web/pom.xml
@@ -77,6 +77,7 @@
       </plugin>
     </plugins>
   </build>
+ 
   <profiles>
     <profile>
       <!-- The default profile skips all tests-->
@@ -95,6 +96,34 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>firefox</id>
+      <properties>
+        <browser>firefox</browser>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.wildfly</groupId>
+          <artifactId>wildfly-arquillian-container-remote</artifactId>
+          <version>${version.arquillian.container}</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>chrome</id>
+      <properties>
+        <browser>chrome</browser>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.wildfly</groupId>
+          <artifactId>wildfly-arquillian-container-remote</artifactId>
+          <version>${version.arquillian.container}</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
     </profile>
   </profiles>
 
